# Vibe_CodeGen

./: .gitignore  Cargo.toml  README.md
src/: apply.rs  cli.rs  config.rs  context.rs  errors.rs  llm.rs  main.rs  plan.rs  utils.rs
src/apply/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/context/: artifacts.rs  embeddings.rs  mod.rs  summarize.rs
src/exec/: mod.rs
src/git/: mod.rs
src/log/: mod.rs
src/merge/: mod.rs
src/patch/: mod.rs
src/plan/: mod.rs
src/prompt/: mod.rs
src/provider/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/safety/: mod.rs
src/ux/: mod.rs  progress.rs
src/wire/: mod.rs
