[package]
name = "vibe_codeGen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
colored = "2"
rayon = "1.10"
regex = "1"
walkdir = "2"
glob = "0.3"
fs-err = "2"
tempfile = "3"
git2 = "0.18"
difflib = "0.4"
unidiff = "0.3"
which = "6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate"] }
futures = "0.3"
bytes = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
humansize = "2"
async-trait = "0.1"
